docs: restructure README and split deep-dive content into docs/